[package]
name = "nexus"
version = "0.1.0"
edition = "2024"

[dependencies]
api_key = "0.1.0"
chrono = "0.4.40"
env_logger = "0.11.7"
futures = "0.3.31"
log = "0.4.26"
os_path = "0.8.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_jsonc = "1.0.108"
simple-error = "0.3.1"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.13"
url = "2.5.4"
uuid = { version = "1.15.1", features = ["v4"] }
warp = "0.3.7"
anyhow = "1.0.97"
fastwebsockets = { version = "0.10.0", features = ["hyper", "unstable-split", "upgrade"] }
http-body-util = "0.1.3"
hyper-util = "0.1.10"
hyper = "1.6.0"
